--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,43 @@
 Package: AdhereRFork
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Adherence to Medications
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: c(person("Dan", "Dediu", role = c("aut", "cre"),
+                     email = "ddediu@gmail.com"),
+             person("Alexandra", "Dima", role = "aut",
+                     email = "alexadima@gmail.com"),
+             person("Samuel", "Allemann", role = "aut",
+                     email = "samuel.allemann@gmx.ch"))
+Author: Dan Dediu [aut, cre],
+        Alexandra Dima [aut],
+        Samuel Allemann [aut]
+Maintainer: David Fyfe <dffyfe@gmail.com>
+Description: Computation of adherence to medications from Electronic Health care 
+    Data and visualization of individual medication histories and adherence 
+    patterns. The package implements a set of S3 classes and
+    functions consistent with current adherence guidelines and definitions. 
+    It allows the computation of different measures of
+    adherence (as defined in the literature, but also several original ones), 
+    their publication-quality plotting,
+    the estimation of event duration and time to initiation,
+    the interactive exploration of patient medication history and 
+    the real-time estimation of adherence given various parameter settings.
+    It scales from very small datasets stored in flat CSV files to very large 
+    databases and from single-thread processing on mid-range consumer
+    laptops to parallel processing on large heterogeneous computing clusters.
+    It exposes a standardized interface allowing it to be used from other
+    programming languages and platforms, such as Python.
+URL: https://github.com/dffyfe/AdhereRFork
+License: GPL (>= 2)
+LazyData: TRUE
+RoxygenNote: 7.1.2
+Imports: lubridate (>= 1.5), parallel (>= 3.0), data.table (>= 1.9),
+        rsvg (>= 1.3), jpeg (>= 0.1), png (>= 0.1), webp (>= 1.0),
+        methods
+Depends: R (>= 3.0)
+Suggests: rmarkdown (>= 1.1), knitr (>= 1.20), R.rsp (>= 0.40),
+        base64(>= 2.0), AdhereRViz (>= 0.2)
+VignetteBuilder: knitr, R.rsp
 Encoding: UTF-8
-LazyData: true
+NeedsCompilation: no
+Packaged: 2021-04-19 17:11:50 UTC; ddediu
