--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,9 +31,16 @@ URL: https://github.com/dffyfe/AdhereRFork
 License: GPL (>= 2)
 LazyData: TRUE
 RoxygenNote: 7.1.2
-Imports: lubridate (>= 1.5), parallel (>= 3.0), data.table (>= 1.9),
-        rsvg (>= 1.3), jpeg (>= 0.1), png (>= 0.1), webp (>= 1.0),
-        methods
+Imports: 
+    lubridate (>= 1.5),
+    parallel (>= 3.0),
+    data.table (>= 1.9),
+    rsvg (>= 1.3),
+    jpeg (>= 0.1),
+    png (>= 0.1),
+    webp (>= 1.0),
+    methods,
+    htmltools
 Depends: R (>= 3.0)
 Suggests: rmarkdown (>= 1.1), knitr (>= 1.20), R.rsp (>= 0.40),
         base64(>= 2.0), AdhereRViz (>= 0.2)
