CMA11 and CMA10 fix
CMA11 added. Fixed bug in CMA10 where events that started before the OW and finished after weren't being capped at OW length.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(getMGs,CMA_sliding_window)
 S3method(plot,CMA0)
 S3method(plot,CMA1)
 S3method(plot,CMA10)
+S3method(plot,CMA11)
 S3method(plot,CMA2)
 S3method(plot,CMA3)
 S3method(plot,CMA4)
@@ -26,6 +27,7 @@ S3method(plot,CMA_sliding_window)
 S3method(print,CMA0)
 S3method(print,CMA1)
 S3method(print,CMA10)
+S3method(print,CMA11)
 S3method(print,CMA2)
 S3method(print,CMA3)
 S3method(print,CMA4)
@@ -42,6 +44,7 @@ S3method(subsetCMA,CMA_sliding_window)
 export(CMA0)
 export(CMA1)
 export(CMA10)
+export(CMA11)
 export(CMA2)
 export(CMA3)
 export(CMA4)
