--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,10 +40,10 @@ Imports:
     png (>= 0.1),
     webp (>= 1.0),
     methods,
-    htmltools
+    htmltools,
+    base64(>= 2.0)
 Depends: R (>= 3.0)
-Suggests: rmarkdown (>= 1.1), knitr (>= 1.20), R.rsp (>= 0.40),
-        base64(>= 2.0), AdhereRViz (>= 0.2)
+Suggests: rmarkdown (>= 1.1), knitr (>= 1.20), R.rsp (>= 0.40), AdhereRViz (>= 0.2)
 VignetteBuilder: knitr, R.rsp
 Encoding: UTF-8
 NeedsCompilation: no
